Added Restart Command (Still a little buggy)